--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
 body {
     background-color: #eee;
+    margin: 0;
+    padding: 0;
+}
+
+html, body, #potato {
+    height: 100%;
+}
+
+.movie {
+    background-color: #fff;
+    display: flex;
+    margin-bottom: 30px;
+    height: 500px;
+    padding: 20px;
+}
+
+.movie img {
+    margin-right: 20px;
 }
